--- a/style.css
+++ b/style.css
@@ -40,8 +40,8 @@ nav a:hover {
   text-decoration: underline;
 }
 
-#header a{
-  text-decoration: none;
+#header a:hover{
+  text-decoration: underline;
   color: #868e96;
 }
 
