--- a/style.css
+++ b/style.css
@@ -66,6 +66,13 @@ div.jumbotron {
   line-height: 40px;
 }
 
+.questions {
+  padding-top: 0px;
+  padding-right: 20px;
+  padding-bottom: 0px;
+  padding-left: 0px;
+}
+
 footer{
   border-top: 1px solid #ccc;
   margin-top: 80px;
