--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ div.jumbotron {
   line-height: 40px;
 }
 
-.questions {
+div.questions {
   padding-top: 0px;
   padding-right: 20px;
   padding-bottom: 0px;
