--- a/style.css
+++ b/style.css
@@ -73,6 +73,11 @@ div.questions {
   padding-left: 20px;
 }
 
+.questions h4 {
+  font-size: 30px;
+  margin-bottom: 10px;
+}
+
 footer{
   border-top: 1px solid #ccc;
   margin-top: 80px;
